--- a/aph-bot.css
+++ b/aph-bot.css
@@ -262,7 +262,7 @@
 
 .WAC__button--base.WAC__button--round {
     background-color: #F6F6F6 !important;
-    color: #08BDBA !important;
+    color: #001534 !important;
     margin: 0.5rem 5rem 0.5rem 0.5rem !important;
     border: 1px solid #001534 !important;
     border-radius: 32px !important;
